--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,26 @@ font-size: 2rem;
 padding: 40px;
 }
  
- .big-heading{
-  font-size:1.2rem;
-
 }
+ 
+
+ 
+ @media(max-width:768px) {
+  
+   .big-heading{
+  font-size:1.6rem;
+ }
+  
+  .cta-heading{
+  font-size:1.6rem;
+ }
+ 
+ }
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
